build: OpenJDK 11 deprecation suppression
This fixes #16